# flight-price-tracker

./: .env.example  .gitignore  AGENTS.md  README.md  config.yaml  pyproject.toml
.github/workflows/: track.yml
evidence/route=VIE-TGD/run_date=2026-02-08/: outbound_date=2026-02-09.json  outbound_date=2026-02-09.sha256  outbound_date=2026-02-10.json  outbound_date=2026-02-10.sha256  outbound_date=2026-02-11.json  outbound_date=2026-02-11.sha256  outbound_date=2026-02-12.json  outbound_date=2026-02-12.sha256  outbound_date=2026-02-13.json  outbound_date=2026-02-13.sha256  outbound_date=2026-02-14.json  outbound_date=2026-02-14.sha256  outbound_date=2026-02-15.json  outbound_date=2026-02-15.sha256  outbound_date=2026-02-16.json  outbound_date=2026-02-16.sha256  outbound_date=2026-02-17.json  outbound_date=2026-02-17.sha256  outbound_date=2026-02-18.json  outbound_date=2026-02-18.sha256  outbound_date=2026-02-19.json  outbound_date=2026-02-19.sha256  (+40 more)
evidence_ui/: .gitignore
evidence_ui/pages/: index.md
evidence_ui/static/: evidence
reports/: 2026-02-08.md  2026-02-09.md  2026-02-10.md  2026-02-11.md  2026-02-12.md  2026-02-13.md  2026-02-14.md  2026-02-15.md  2026-02-16.md  2026-02-17.md  2026-02-18.md  2026-02-19.md  2026-02-20.md  2026-02-21.md  latest.md
src/flight_price_tracker/: __init__.py  cli.py  dlt_source.py  normalize.py  report.py  run.py  serpapi.py  settings.py
tests/: conftest.py  test_normalize.py  test_report.py  test_run.py
tests/fixtures/: serpapi_google_flights_airports_sample.json  serpapi_google_flights_sample.json
(+20 files in other folders)
